apps/base/argocd-istio/argo-gateway.yaml
apiVersion: networking.istio.io/v1 
kind: Gateway 
metadata: 
  name: argocd-gateway 
  namespace: argocd
spec:
  # The selector matches the ingress gateway pod labels.
  # If you installed Istio using Helm following the standard documentation, this would be "istio=ingress"
  selector: 
    istio: gateway # 匹配的是ingressgateway pod的label 
  servers: 
  - port: 
      number: 80 
      name: http 
      protocol: HTTP 
    hosts: 
    - "argocd.hanxux.local" # 发布域名
